--- a/students.html
+++ b/students.html
@@ -60,7 +60,7 @@
   
 <li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
-<li><p>Thesis committee: Recep Bekci (McGill), Mehran Poursoltani (HEC Montréal), Claudio Sole (Polytechnique Montréal)</p>
+<li><p>Thesis committee: Claudio Sole (Polytechnique Montréal), Mehran Poursoltani (HEC Montréal), Recep Bekci (McGill), Yang Chen (Queen's University)</p>
 
 </ul>
 <h3>M.S. and UG Students</h3>
