--- a/research.html
+++ b/research.html
@@ -394,14 +394,14 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 <h3>Books and Book Chapters</h3>
 
 <ul>
-<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3-030-85855-1)
+<li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="">"Precision Retailing,"</a> <b>University of Toronto Press</b>, Forthcoming, 2023
+<li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing,"</a> <b>University of Toronto Press</b>, 2023 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
