--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ Associate Director for Strategy and Partnership @<a href="https://conflictanalyt
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
 Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, <a href="https://www.intelligems.io/"</a>Intelligems</a>, <a href="https://www.leav.co/"</a>Leav</a>, <a href="https://cherre.com/"</a>Cherre</a>, <a href="https://www.supplyve.com/"</a>Supplyve</a>, <a href="https://www.shop-tote.com/"</a>Tote</a>, <a href="https://www.ecoprice.shop/home"</a>EcoPrice</a>, <a href="https://silverback.ai/"</a>Silverback.ai</a> <br />
 <br />
-<b>Book:</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3-030-85855-1)<br />
+<b>Books:<br />
+</b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
 Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
 Amazon.com</a>, 
 <a href="https://www.amazon.ca/dp/3030858545/ref=cm_sw_em_r_mt_dp_PPHW9S8RYS23BF6NXFMK">
@@ -65,6 +66,15 @@ Barnes & Noble</a>,
 Book Depository</a>,
   <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/Demand-Prediction-in-Retail--A-Practical-Guide-to-Leverag/9783030858544">
 Browns Books</a>
+<br />
+</b> <a href="https://utorontopress.com/9781487542719/precision-retailing/"</a>"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2023 (ISBN 978-1487542719)<br />
+Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
+Amazon.com</a>, 
+<a href="https://www.amazon.com/Precision-Retailing-Behavioral-Behaviorally-Organizations/dp/1487542712/ref=sr_1_1?keywords=precision+retailing&qid=1680526424&s=books&sr=1-1">
+Amazon.ca</a>,
+  <a href="https://www.amazon.ca/Precision-Retailing-Behavioral-Insights-Analytics/dp/1487542712/ref=sr_1_1?crid=98NPDI9ABKTB&keywords=precision+retailing&qid=1680526474&sprefix=precision+retailing%2Caps%2C86&sr=8-1">
+University of Toronto Press</a>,
+  <a href="https://utorontopress.com/9781487542719/precision-retailing/">
 </p>
 
 </td>
