--- a/index.html
+++ b/index.html
@@ -67,13 +67,14 @@ Book Depository</a>,
   <a href="https://www.brownsbfs.co.uk/Product/Cohen-Maxime-C/Demand-Prediction-in-Retail--A-Practical-Guide-to-Leverag/9783030858544">
 Browns Books</a>
 <br />
+<br />
 </b> <a href="https://utorontopress.com/9781487542719/precision-retailing/"</a>"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2023 (ISBN 978-1487542719)<br />
 Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
 Amazon.com</a>, 
 <a href="https://www.amazon.com/Precision-Retailing-Behavioral-Behaviorally-Organizations/dp/1487542712/ref=sr_1_1?keywords=precision+retailing&qid=1680526424&s=books&sr=1-1">
 Amazon.ca</a>,
   <a href="https://www.amazon.ca/Precision-Retailing-Behavioral-Insights-Analytics/dp/1487542712/ref=sr_1_1?crid=98NPDI9ABKTB&keywords=precision+retailing&qid=1680526474&sprefix=precision+retailing%2Caps%2C86&sr=8-1">
-University of Toronto Press</a>,
+University of Toronto Press</a>
   <a href="https://utorontopress.com/9781487542719/precision-retailing/">
 </p>
 
