--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@ Advisor for startups: <a href="https://www.turbodega.com/en/"</a>Turbodega</a>, 
 <br />
 <b>Books:<br />
 </b> <a href="https://demandprediction.github.io/index.html"</a>"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)<br />
-Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
+Buy the book: 
+<a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
 Amazon.com</a>, 
 <a href="https://www.amazon.ca/dp/3030858545/ref=cm_sw_em_r_mt_dp_PPHW9S8RYS23BF6NXFMK">
 Amazon.ca</a>,
@@ -69,13 +70,19 @@ Browns Books</a>
 <br />
 <br />
 </b> <a href="https://utorontopress.com/9781487542719/precision-retailing/"</a>"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2023 (ISBN 978-1487542719)<br />
-Buy the book: <a href="https://www.amazon.com/dp/3030858545/ref=cm_sw_em_r_mt_dp_Z79HAXCE8774FBV5FYNG">
-Amazon.com</a>, 
+Buy the book: 
 <a href="https://www.amazon.com/Precision-Retailing-Behavioral-Behaviorally-Organizations/dp/1487542712/ref=sr_1_1?keywords=precision+retailing&qid=1680526424&s=books&sr=1-1">
+Amazon.com</a>, 
+<a href="https://www.amazon.ca/Precision-Retailing-Behavioral-Insights-Analytics/dp/1487542712/ref=sr_1_1?crid=98NPDI9ABKTB&keywords=precision+retailing&qid=1680526474&sprefix=precision+retailing%2Caps%2C86&sr=8-1">
 Amazon.ca</a>,
-  <a href="https://www.amazon.ca/Precision-Retailing-Behavioral-Insights-Analytics/dp/1487542712/ref=sr_1_1?crid=98NPDI9ABKTB&keywords=precision+retailing&qid=1680526474&sprefix=precision+retailing%2Caps%2C86&sr=8-1">
-University of Toronto Press</a>
-  <a href="https://utorontopress.com/9781487542719/precision-retailing/">
+<a href="https://utorontopress.com/9781487542719/precision-retailing/">  
+University of Toronto Press</a>,
+<a href="https://www.barnesandnoble.com/w/precision-retailing-laurette-dub/1143224205?ean=9781487542719">
+Barnes & Noble</a>,
+<a href="https://www.bookdepository.com/Precision-Retailing-Laurette-Dube/9781487542719?ref=grid-view&qid=1680528697434&sr=1-1">
+Book Depository</a>,
+<a href="https://www.brownsbfs.co.uk/Product/Dube-Laurette/Precision-Retailing--Driving-Results-with-Behavioral-Insi/9781487542719">
+Browns Books</a>
 </p>
 
 </td>
