--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
  
+<li><p><a href="https://rethink.industries/video/retail-cloud-alliance-data-drivers-episode-3/">Retail Cloud Alliance: Data Drivers</a>, RETHINK Retail, April 2023</p>
+
 <li><p><a href="https://rethink.industries/top-retail-influencers-2023/">RETHINK Retail's Top Retail Influencers of 2023</a>, RETHINK Retail, January 2023</p>
  
 <li><p><a href="https://www.youtube.com/watch?v=v3mNFn2xYKo6">Futur PME : l’importance de la gestion des prix en cette période inflationniste</a> (in French), Futur PME Youtube Interview, December 2022</p> 
