--- a/students.html
+++ b/students.html
@@ -93,6 +93,8 @@
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
   
 <li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
+  
+<li><p>Erwan Makame - McGill UG in Management</p>   
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
