--- a/students.html
+++ b/students.html
@@ -84,9 +84,9 @@
   
 <li><p>Tiancheng Zhang (2021) - McGill Master in Analytics. First Position: Cardinal Operations, Operations Research Algorithms Engineer</p>
   
-<li><p>Niloofar Tarighat (2022) - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p>
+<li><p>Niloofar Tarighat (2022) - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark). First position: Data Scientist at CIBC</p>
 
-<li><p>Uzair Ahmad (2022) - McGill Master in Analytics</p>
+<li><p>Uzair Ahmad (2022) - McGill Master in Analytics. First position: Data Scientist at ELNA Medical</p>
   
 <li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
   
@@ -94,7 +94,7 @@
   
 <li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
   
-<li><p>Erwan Makame - McGill UG in Management</p>   
+<li><p>Erwan Makame - McGill UG Student in Management</p>   
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
