--- a/research.html
+++ b/research.html
@@ -384,6 +384,13 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+<ol start="36">
+<li><p><a href="https://www.flipsnack.com/afire/summit12.html?p=54">"Measuring Gentrification,"</a> with R. Bekkerman and D. Warde, Summit Journal AFIRE, Issue 12, 2023 <br />
+</div>
+</p>
+</li>
+</ol>
+
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
 </div>
