--- a/teaching.html
+++ b/teaching.html
@@ -33,6 +33,13 @@
 <h2>Teaching Experience</h2>
 
 <ul>
+<li><p><b><a href="">ISCAE-McGill Mini MBA Program, McGill University Executive Institute - 2023 </a></b><br />
+Data-Driven Decision Making
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="">International Masters Program for Managers, McGill University - 2022 </a></b><br />
 Analytics and AI for Managers Course
 </p>
@@ -56,7 +63,7 @@ Excelling in the New World of Retail - Module on Data Analytics & Decision Makin
   
 <ul>
 <li><p><b><a href="">Operations Management - McGill University - 2020-2023 </a></b><br />
-Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9 (out of 5)
+Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6, 4.8, 4.9, 4.7, 4.9, 4.8, 4.9 (out of 5)
 </p>
 </li>
 </ul>
