--- a/teaching.html
+++ b/teaching.html
@@ -33,7 +33,7 @@
 <h2>Teaching Experience</h2>
 
 <ul>
-<li><p><b><a href="">ISCAE-McGill Mini MBA Program, McGill University Executive Institute - 2023 </a></b><br />
+<li><p><b><a href="">ISCAE-McGill Mini MBA, McGill University Executive Institute - 2023 </a></b><br />
 Data-Driven Decision Making
 </p>
 </li>
