--- a/research.html
+++ b/research.html
@@ -313,7 +313,7 @@ Accepted to the 2022 Conference on Empirical Legal Studies <br />
 <li><p><a href="https://maxccohen.github.io/Impact-Behavioral-Economic-Drivers.pdf">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, <b>Manufacturing & Service Operations Management</b>, 2023 (published online) <br />
 <a href="https://maxccohen.github.io/Impact-Behavioral-Economic-Drivers-Appendix.pdf">Online Appendix</a> <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
-Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a> <br />
+Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a>, <a href="https://newsroom.haas.berkeley.edu/research/study-in-the-gig-economy-getting-to-know-workers-motivation-is-key-to-retaining-them/">Berkeley Haas Newsroom</a> <br />
 Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalist in the 2020 POMS College of Behavioral Operations Junior Scholar Paper Competition <br />
 </div>
 </p>
@@ -434,6 +434,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Submitted <br />
+Accepted to the <i>2023 M&SOM Technology, Innovation, and Entrepreneurship SIG</i> <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
 </div>
 </p>
