--- a/research.html
+++ b/research.html
@@ -449,7 +449,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Submitted <font color="red"<b>(NEW)</b></font> <br />
-Finalist in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
+Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
 </li>
