--- a/research.html
+++ b/research.html
@@ -433,6 +433,15 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Addressing Fairness in Machine Learning Predictions: Strategic Best-Response Fair Discriminant Removed Algorithm,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 2nd Major Revision in <b>Information Systems Research</b> <br />
+Published in Proceedings of the 5th AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society (AIES) (pp. 664-664), Oxford, United Kingdom, 2022 <br />
+Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technologies/">Delve</a> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Submitted <br />
 Accepted to the <i>2023 M&SOM Technology, Innovation, and Entrepreneurship SIG</i> <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
