--- a/research.html
+++ b/research.html
@@ -473,6 +473,20 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </ul>
 
 <ul>
+<li><p><a href="">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Soon to be submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Soon to be submitted <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
 </div>
 </p>
