--- a/workEx.html
+++ b/workEx.html
@@ -51,6 +51,13 @@ Member of GERAD - Group for Research in Decision Analysis
 </p>
 </li>
 </ul>
+ 
+<ul>
+<li><p><b><a href="#">Intégral, Montreal, Canada (2023-present)</a></b><br />
+<b>Chief AI Officer</b>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><b><a href="#">IVADO Labs, Montreal, Canada (2020-present)</a></b><br />
