--- a/research.html
+++ b/research.html
@@ -481,6 +481,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 
 <ul>
 <li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Soon to be submitted <br />
+Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
 </li>
