--- a/research.html
+++ b/research.html
@@ -451,13 +451,13 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
 </div>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Submitted <br />
 Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
@@ -473,14 +473,14 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </ul>
 
 <ul>
-<li><p><a href="">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Soon to be submitted <br />
+<li><p><a href="">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Soon to be submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
 </ul>
 
 <ul>
-<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Soon to be submitted <br />
+<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Soon to be submitted <font color="red"<b>(NEW)</b></font> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
