--- a/research.html
+++ b/research.html
@@ -473,7 +473,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensur
 </ul>
 
 <ul>
-<li><p><a href="">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Soon to be submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
