--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Associate Member, <a href="https://www.mcgill.ca/ece/"</a>Electrical and Compute
 Member of <a href="https://www.cirrelt.ca/"</a> CIRRELT </a> and <a href="https://www.gerad.ca/en"</a> GERAD </a> <br />
 <br />
 <b>Chief AI Officer</b> @<a href="https://elnamedical.com/"</a> ELNA Medical </a> <br />
-Chief AI Officer @<a href="https://integral.partners/"</a> Intégral </a> <br />
+Director of AI @<a href="https://integral.partners/"</a> Intégral </a> <br />
 Scientific Advisor in AI and Data Science @<a href="https://ivadolabs.com/"</a> IVADO Labs </a> <br />
 Associate Director for Strategy and Partnership @<a href="https://conflictanalytics.queenslaw.ca/"</a> Conflict Analytics Lab</a> <br />
 Scientific Director @<a href="https://myopencourt.org/"</a> MyOpenCourt.org</a> <br />
