--- a/workEx.html
+++ b/workEx.html
@@ -54,7 +54,7 @@ Member of GERAD - Group for Research in Decision Analysis
  
 <ul>
 <li><p><b><a href="#">Intégral, Montreal, Canada (2023-present)</a></b><br />
-<b>Director of AI</b>
+<b>Director of Artificial Intelligence</b>
 </p>
 </li>
 </ul>
