--- a/research.html
+++ b/research.html
@@ -488,6 +488,14 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Soon to be submitted <font color="red"<b>(NEW)</b></font> <br />
+Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
 </div>
 </p>
