--- a/research.html
+++ b/research.html
@@ -434,7 +434,7 @@ Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Addressing Fairness in Machine Learning Predictions: Strategic Best-Response Fair Discriminant Removed Algorithm,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 2nd Major Revision in <b>Information Systems Research</b> <br />
-Published in proceedings of the 2022 AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society <br />
+Published in the 2022 AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technologies/">Delve</a> <br />
 </div>
 </p>
