--- a/research.html
+++ b/research.html
@@ -220,7 +220,7 @@ Media coverage: <a href="https://revenue-hub.com/why-so-little-testing-of-revenu
 </ol>
 
 <ol start="17">
-<li><p><a href="https://maxccohen.github.io/Incentivizing-Commuters-to-Carpool.pdf">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, <b>Manufacturing & Service Operations Management</b>, 2022 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Incentivizing-Commuters-to-Carpool.pdf">"Incentivizing Commuters to Carpool: A Large Field Experiment with Waze,"</a> with M. D. Fiszer, A. Ratzon, and R. Sasson, <b>Manufacturing & Service Operations Management</b>, 25(4):1263-1284, 2023 <br />
 <a href="https://maxccohen.github.io/Carpool-Appendix.pdf">Online Appendix</a> <br />
 <a href="https://www.socialscienceregistry.org/trials/4822">AEA RCT Registry</a> <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/converting-commuters-carpoolers">Delve</a> <br />
