--- a/research.html
+++ b/research.html
@@ -310,7 +310,7 @@ Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </ol>
 
 <ol start="27">
-<li><p><a href="https://maxccohen.github.io/Impact-Behavioral-Economic-Drivers.pdf">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, <b>Manufacturing & Service Operations Management</b>, 2023 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Impact-Behavioral-Economic-Drivers.pdf">"The Impact of Behavioral and Economic Drivers on Gig Economy Workers,"</a> with G. Allon and W. P. Sinchaisri, <b>Manufacturing & Service Operations Management</b>, 25(4):1376-1393, 2023 <br />
 <a href="https://maxccohen.github.io/Impact-Behavioral-Economic-Drivers-Appendix.pdf">Online Appendix</a> <br />
 Selected as Best Paper at the 2019 Academy of Management Meeting and accepted to the <i>2019 MSOM Service SIG</i><br />
 Medial coverage: <a href="http://knowledge.wharton.upenn.edu/article/what-motivates-workers-in-the-gig-economy/">Knowledge@Wharton</a>, <a href="https://newsroom.haas.berkeley.edu/research/study-in-the-gig-economy-getting-to-know-workers-motivation-is-key-to-retaining-them/">Berkeley Haas Newsroom</a> <br />
