--- a/research.html
+++ b/research.html
@@ -296,7 +296,7 @@ Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </ol>
 
 <ol start="25">
-<li><p><a href="https://maxccohen.github.io/Best-of-Both-Worlds.pdf">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, <b>Management Science</b>, 2022 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Best-of-Both-Worlds.pdf">"Best of Both Worlds Ad Contracts: Guaranteed Allocation and Price with Programmatic Efficiency,"</a> with A. Desir, N. Koroula, and B. Sivan, <b>Management Science</b>, 29(7):4027-4050, 2023 <br />
 </div>
 </p>
 </li>
