--- a/research.html
+++ b/research.html
@@ -288,7 +288,7 @@ Accepted at CIST 2021, 2021 North American Meeting of the Urban Economics Associ
 </ol>
 
 <ol start="24">
-<li><p><a href="https://rdcu.be/c8NRs">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, <b>Artificial Intelligence and Law</b>, 2023 (published online)  <br /> 
+<li><p><a href="https://rdcu.be/c8NRs">"The Use of AI in Legal Systems: Determining Independent Contractor vs. Employee Status,"</a> with S. Dahan, W. Khern-am-nuai, H. Shimao, and J. Touboul, <b>Artificial Intelligence and Law</b>, 2023  <br /> 
 Accepted to the 2022 Conference on Empirical Legal Studies <br />
 </div>
 </p>
@@ -329,7 +329,7 @@ Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </ol>
 
 <ol start="29">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, Forthcoming in <b>AI & Society: Knowledge, Culture and Communication</b>, 2023 <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4035703">"Data Analytics to Detect Panic Buying and Improve Products Distribution Amid Pandemic,"</a> with Y. Adulyasak, O. Benomar, A. Chaouachi, and W. Khern-am-nuai, <b>AI & Society: Knowledge, Culture and Communication</b>, 2023 <br />
 Accepted to the 2020 Workshop on Information Technologies and Systems (WITS) <br />
 Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tame-pandemic-panic-buying">Delve</a>, <a href="https://lactualite.com/techno/ne-plus-jamais-manquer-de-papier-de-toilette/">L'actualité (in French)</a> <br />
 </div>
