--- a/research.html
+++ b/research.html
@@ -338,7 +338,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 </ol>
 
 <ol start="30">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Forthcoming in <b>Manufacturing & Service Operations Management</b>, 2023 <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3808667">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, Forthcoming in <b>Manufacturing & Service Operations Management</b> <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 </div>
 </p>
@@ -399,12 +399,13 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
+  <!--
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
 </div>
 </p>
 </li>
-</ul>
+</ul> -->
 
 <h3>Books and Book Chapters</h3>
 
@@ -442,7 +443,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technol
 </ul>
 
 <ul>
-<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision at in <b>Manufacturing & Service Operations Management</b>, <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b>, <font color="red"<b>(NEW)</b></font> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
