--- a/research.html
+++ b/research.html
@@ -443,7 +443,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technol
 </ul>
 
 <ul>
-<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b>, <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <font color="red"<b>(NEW)</b></font> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
@@ -451,7 +451,7 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Submitted <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Reject and Resubmit in <b>Manufacturing & Service Operations Management</b> <br />
 Accepted to the <i>2023 M&SOM Technology, Innovation, and Entrepreneurship SIG</i> <br />
 Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-tax-breaks-for-developers-to-help-poor-neighbourhoods-but-are-they-choosing-wisely-165034">The Conversation</a>, <a href="https://www.propmodo.com/the-high-price-of-opportunity-zones/">Propmodo</a>, <a href="https://www.ejeprime.com/mercado/opportunity-zones-el-urbanismo-tax-free-de-trump-en-la-cuerda-floja.html">EjePrime</a> (in Spanish) <br />
 </div>
