--- a/awards.html
+++ b/awards.html
@@ -34,6 +34,8 @@
 
 <li><p>2023: RETHINK Retail's Top Retail Influencers</p>
   
+<li><p>2023: Finalist in the INFORMS Service Science DEIJ Paper Competition</p>
+  
 <li><p>2023: Second Place in the POMS CBOM Junior Scholar Paper Competition (student: Nymisha Bandi)</p>
     
 <li><p>2022: MSOM Young Scholar Prize</p>
