--- a/research.html
+++ b/research.html
@@ -409,26 +409,26 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 
 <h3>Books and Book Chapters</h3>
 
-<ul>
+<ol start="38">
 <li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
-</ul>
+</ol>
 
-<ul>
+<ol start="39">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
-</ul>
+</ol>
 
-<ul>
+<ol start="40">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
 </li>
-</ul>
+</ol>
 
 
 <h3>Under Review and Working Papers</h3>
