--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ My research and teaching have received more than 30 awards, including <a href="h
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
 <p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-2022)
 <p>Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> (2019-present) 
-<p>I have also served as a guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a> (2018-2021) 
+<p>Guest Associate Editor for <a href="https://onlinelibrary.wiley.com/journal/15206750"</a>NRL</a> (2018-2021) 
 
 <h2>Education</h2>
  <p><b>Ph.D.</b>, Operations Research, <a href="http://www.mit.edu/">MIT</a>
