--- a/research.html
+++ b/research.html
@@ -449,6 +449,14 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </p>
 </li>
 </ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
+</div>
+</p>
+</li>
+</ul>
   
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3780241">"The Impact of the Opportunity Zone Program on Residential Real Estate,"</a> with R. Bekkerman, X. Liu, J. Maiden, and D. Mitrofanov, Reject and Resubmit in <b>Manufacturing & Service Operations Management</b> <br />
@@ -463,14 +471,6 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
 </div>
-</li>
-</ul>
-
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Submitted <font color="red"<b>(Revised Version)</b></font> <br />
-Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
-</div>
-</p>
 </li>
 </ul>
 
