--- a/workEx.html
+++ b/workEx.html
@@ -32,6 +32,13 @@
 <h2>Work Experience</h2>
 
 <ul>
+<li><p><b><a href="#">Yale University, New Haven, CT (2023-2024)</a></b><br />
+<b>Visiting Professor and Shubik Fellow</b>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><b><a href="#">McGill University, BSRM and Desautels Faculty of Management, Montreal, Canada (2019-present)</a></b><br />
 <b>Full Professor of Retail and Operations Management (with tenure)</b><br />
 <b>Scale AI Chair</b> in Data Science for Retail<br />
