--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <table class="imgtable"><tr><td>
 <img src="MCohen-2023-V2.png" alt="Maxime Cohen" height="339" width="298" />&nbsp;</td>
 <td align="left"><p><font size="+1.7"><b>Maxime C. Cohen</b></font><br />
-Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management, Yale University</a><br />
+Visiting Professor and Shubik Fellow, <a href="https://som.yale.edu/faculty-research/faculty-directory/maxime-cohen"</a> Yale School of Management</a>, <a href="https://www.yale.edu/"</a>Yale University</a><br />
 Professor, <a href="https://www.mcgill.ca/"</a> McGill University</a> (on Sabbatical 2023-2024)<br />
 <b>Scale AI Chair</b> in Data Science for Retail<br />
 Director of Research at the <a href="https://www.mcgill.ca/bensadoun-school"</a>Bensadoun School of Retail Management</a><br />
