--- a/workEx.html
+++ b/workEx.html
@@ -33,7 +33,7 @@
 
 <ul>
 <li><p><b><a href="#">Yale University, New Haven, CT (2023-2024)</a></b><br />
-<b>Visiting Professor and Shubik Fellow</b>
+<b>Visiting Professor of Operations Management and Shubik Fellow</b>
 </p>
 </li>
 </ul>
