--- a/students.html
+++ b/students.html
@@ -59,6 +59,12 @@
 <li><p>Nymisha Bandi - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
   
 <li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
+
+<li><p>Liting Chen – OM Ph.D. student at McGill Desautels (co-advisor with Sentao Miao)</p>
+
+<li><p>Mehran Poursoltani – Postdoctoral fellow at McGill</p>
+
+<li><p>Doehun Kim – Postdoctoral fellow at McGill (co-advisor with Warut Khern-am-nuai)</p>
   
 <li><p>Thesis committee: Claudio Sole (Polytechnique Montréal), Mehran Poursoltani (HEC Montréal), Recep Bekci (McGill), Yang Chen (Queen's University)</p>
 
@@ -95,6 +101,8 @@
 <li><p>Samara Milstein - McGill UG Student in Biomedical Sciences</p>    
   
 <li><p>Erwan Makame - McGill UG Student in Management</p>   
+
+<li><p>Barry Li – McGill UG Student in Computer Science</p> 
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
