--- a/awards.html
+++ b/awards.html
@@ -33,6 +33,8 @@
 <ul>
 
 <li><p>2023: RETHINK Retail's Top Retail Influencers</p>
+
+<li><p>2023: Finalist in the INFORMS Behavioral Operations Management Best Working Paper Competition</p>
   
 <li><p>2023: Finalist in the INFORMS Service Science DEIJ Paper Competition</p>
   
