--- a/research.html
+++ b/research.html
@@ -452,6 +452,7 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4276735">"Incentivizing Healthy Food Choices Using Add-on Bundling: A Field Experiment,"</a> with N. Bandi and S. Ray, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
+Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
 Second Place in the 2023 POMS CBOM Junior Scholar Paper Competition<br />
 </div>
 </p>
