--- a/research.html
+++ b/research.html
@@ -470,14 +470,9 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </li>
 </ul>
 
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
-</div>
-</li>
-</ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Submitted <font color="red"<b>(Revised Version)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3930622">"Dynamic Pricing with Fairness Constraints,"</a> with S. Miao and Y. Wang, Major Revision in <b>Operations Research</b> <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/could-new-algorithms-ensure-everyone-pays-fair-prices-online/">Delve</a> <br />
 </div>
 </p>
@@ -499,6 +494,12 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </li>
 </ul>
 
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
+</div>
+</li>
+</ul>
+  
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
 </div>
