--- a/research.html
+++ b/research.html
@@ -444,7 +444,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technol
 </ul>
 
 <ul>
-<li><p><a href="">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <font color="red"<b>(NEW)</b></font> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
 </div>
