--- a/teaching.html
+++ b/teaching.html
@@ -40,14 +40,14 @@ Data-Driven Decision Making
 </ul>
   
 <ul>
-<li><p><b><a href="">International Masters Program for Managers, McGill University - 2022 </a></b><br />
+<li><p><b><a href="">International Masters Program for Managers, McGill University - 2022-2023 </a></b><br />
 Analytics and AI for Managers Course
 </p>
 </li>
 </ul>
   
 <ul>
-<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020-2023 </a></b><br />
+<li><p><b><a href="">Mini MBA, McGill University Executive Institute - 2020-2024 </a></b><br />
 Marketing modules for Integrated Management Thinking and Executive Development Course<br />
 Analytics & AI module for Advanced Management Course
 </p>
@@ -69,7 +69,7 @@ Undergraduate core course (2 sections of 65 students each year). Evals: 4.9, 4.6
 </ul>
 
 <ul>
-<li><p><b><a href="">Revenue Management - McGill University - 2020-2023 </a></b><br />
+<li><p><b><a href="">Revenue Management - McGill University - 2020-2024 </a></b><br />
 Elective course for Master of Management in Analytics. Evals: 5, 5, 4.8, 4.9 (out of 5)
 </p>
 </li>
