--- a/research.html
+++ b/research.html
@@ -321,7 +321,7 @@ Finalist in the 2019 INFORMS BOM Section Best Working Paper Competition, Finalis
 </ol>
 
 <ol start="28">
-<li><p><a href="https://maxccohen.github.io/Managing-Airfares-Under-Competition.pdf">"Managing Airfares Under Competition: Insights From a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, <b>Management Science</b>, 2023 (published online)  <br />
+<li><p><a href="https://maxccohen.github.io/Managing-Airfares-Under-Competition.pdf">"Managing Airfares Under Competition: Insights From a Field Experiment,"</a> with A. Jacquillat, J. C. Serpa, and M. Benborhoum, <b>Management Science</b>, 69(10):6076–6108, 2023  <br />
 Best Technical Presentation at the 2018 AGIFORS Annual Symposium <br />
 </div>
 </p>
