--- a/research.html
+++ b/research.html
@@ -494,20 +494,20 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Soon to be submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Working paper <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Submitted <br />
 </div>
 </li>
 </ul>
   
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Deep Multi-Objective Multi-Stakeholder Music Recommendation,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Working paper <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Bridging Listeners with Artists: Deep Multi-Objective Multi-Stakeholder Music Recommendations,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Submitted <br />
 </div>
 </p>
 </li>
