--- a/research.html
+++ b/research.html
@@ -400,31 +400,30 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </li>
 </ol>
 
-  <!--
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Submitted <br />
+<ol start="38">
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal: The Influence of Artificial Intelligence and the Covid-19 Pandemic,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Forthcoming in IEEE Engineering Management Review <br />
 </div>
 </p>
 </li>
-</ul> -->
+</ol>
 
 <h3>Books and Book Chapters</h3>
 
-<ol start="38">
+<ol start="39">
 <li><p> M. C. Cohen, P. E. Gras, A. Pentecoste, R. Zhang, <a href="https://demandprediction.github.io/index.html">"Demand Prediction in Retail - A Practical Guide to Leverage Data and Predictive Analytics,"</a> <b>Springer</b> Series in Supply Chain Management 14, 2022 (ISBN 978-3030858551)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="39">
+<ol start="40">
 <li><p> L. Dubé, M. C. Cohen, N. Yang, B. Monla (Eds.), <a href="https://utorontopress.com/9781487542719/precision-retailing/">"Precision Retailing: Driving Results with Behavioral Insights and Data Analytics,"</a> <b>University of Toronto Press</b>, 2024 (ISBN 978-1487542719)
 </div>
 </p>
 </li>
 </ol>
 
-<ol start="40">
+<ol start="41">
 <li><p>M. C. Cohen, G. Perakis, <a href="https://link.springer.com/chapter/10.1007/978-3-030-31733-1_4">"Optimizing Promotions for Multiple Items in Supermarkets,"</a> Channel Strategies and Marketing Mix in a Connected World, (Eds.) S. Ray and S. Yin, <b>Springer</b> Series in Supply Chain Management 9, 2020 <br />
 </div>
 </p>
