--- a/index.html
+++ b/index.html
@@ -121,8 +121,10 @@ My research and teaching have received 30+ awards, including <a href="https://po
 
 <h2>Editorial Work</h2>
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department and Supply Chain Management Department (2022-present)
+<p>Deputy Editor for <a href="https://pubsonline.informs.org/journal/serv"</a>Service Science</a> (2024-present)
 <p>Guest Department Editor for <a href="https://www.poms.org/sites/default/files/callforpapers/cfp_POM_SI_ResDataScience_updated.pdf"</a>POM Special Issue on "Responsible Data Science"</a> (2022-2024)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
+<p>Associate Editor for <a href="https://pubsonline.informs.org/journal/opre"</a>Operations Research</a> (2024-present)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
 <p>Senior Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> (2017-2022)
 <p>Advisor and Associate Editor for <a href="https://mbrjournal.com/"</a>Management and Business Review</a> (2019-present) 
