--- a/students.html
+++ b/students.html
@@ -95,6 +95,8 @@
 <li><p>Uzair Ahmad (2022) - McGill Master in Analytics. First position: Data Scientist at ELNA Medical</p>
   
 <li><p>Ken Lee - M.S. in Computer Science at McGill (co-advisor with Derek Nowrouzezahrai)</p> 
+
+<li><p>Tony Xu - M.S. in Electrical and Computer Engineering at McGill (co-advisor with James Clark)</p> 
   
 <li><p>Huzbah Jagirdar - McGill UG Honours Economics Student</p>    
   
