--- a/research.html
+++ b/research.html
@@ -394,14 +394,14 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ol start="37">
-<li><p><a href="https://www.flipsnack.com/afire/summit12.html?p=54">"Measuring Gentrification,"</a> with R. Bekkerman and D. Warde, Summit Journal AFIRE, Issue 12, 2023 <br />
+<li><p><a href="https://www.flipsnack.com/afire/summit12.html?p=54">"Measuring Gentrification,"</a> with R. Bekkerman and D. Warde, <b>Summit Journal AFIRE</b>, Issue 12, 2023 <br />
 </div>
 </p>
 </li>
 </ol>
 
 <ol start="38">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal: The Influence of Artificial Intelligence and the Covid-19 Pandemic,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Forthcoming in IEEE Engineering Management Review <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal: The Influence of Artificial Intelligence and the Covid-19 Pandemic,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Forthcoming in <b>IEEE Engineering Management Review</b> <br />
 </div>
 </p>
 </li>
