--- a/news.html
+++ b/news.html
@@ -34,7 +34,7 @@
 
 <li><p><a href="https://rethink.industries/top-retail-experts-2024/">RETHINK Retail's Top Retail Influencers of 2024</a>, RETHINK Retail, January 2024</p>
 
-<li><p><a href="https://ccentral.ca/opportunity-knocks">From AI to Retail Media, Private Label and Beverage Alcohol, Here’s What Will Define the Year Ahead</a>, Convenience Store News Canada, January 2024</p>
+<li><p><a href="https://ccentral.ca/csnc-exclusive-5-ways-convenience-retailers-can-use-ai-now">5 Ways Convenience Retailers Can Use AI Now</a>, Convenience Store News Canada, January 2024</p>
       
 <li><p><a href="https://www.cbc.ca/news/business/goodbye-cashiers-amazon-tech-lets-shoppers-skip-the-checkout-1.6992085">Goodbye, Cashiers: Amazon Tech Lets Shoppers Skip the Checkout</a>, CBC News, October 2023</p> 
     
