--- a/research.html
+++ b/research.html
@@ -338,7 +338,7 @@ Media coverage: <a href="https://www.mcgill.ca/delve/article/blog/how-ai-can-tam
 </ol>
 
 <ol start="30">
-<li><p><a href="https://maxccohen.github.io/Selecting-Cover-Images.pdf">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, <b>Manufacturing & Service Operations Management</b>, 2023 (published online) <br />
+<li><p><a href="https://maxccohen.github.io/Selecting-Cover-Images.pdf">"Selecting Cover Images for Restaurant Reviews: AI vs. Wisdom of the Crowd,"</a> with W. Khern-am-nuai, H. So, and Y. Adulyasak, <b>Manufacturing & Service Operations Management</b>, 26(1):330-349, 2024 <br />
 Finalist in the 2021 INFORMS Service Science Best Cluster Paper Award <br />
 <a href="https://maxccohen.github.io/Selecting-Cover-Images-Appendix.pdf">Online Appendix</a> <br />
 </div>
