--- a/news.html
+++ b/news.html
@@ -32,6 +32,8 @@
 <h3>In the News</h3>
 <ul>
 
+<li><p><a href="https://www.ledevoir.com/opinion/idees/806309/idees-ayons-pas-peur-potentiel-ia">N’ayons pas peur du potentiel de l’IA!</a> (in French), Le Devoir, January 2024</p>  
+    
 <li><p><a href="https://rethink.industries/top-retail-experts-2024/">RETHINK Retail's Top Retail Influencers of 2024</a>, RETHINK Retail, January 2024</p>
 
 <li><p><a href="https://ccentral.ca/csnc-exclusive-5-ways-convenience-retailers-can-use-ai-now">5 Ways Convenience Retailers Can Use AI Now</a>, Convenience Store News Canada, January 2024</p>
