--- a/research.html
+++ b/research.html
@@ -450,7 +450,7 @@ Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technol
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591826">"Customers' Multihoming Behavior in Ride-hailing: Empirical Evidence Using a Structural Model,"</a> with S. Chitla, S. Jagabathula, and D. Mitrofanov, Major Revision in <b>Manufacturing & Service Operations Management</b> <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 Finalist in the 2023 INFORMS Behavioral Operations Management Best Working Paper Competition<br />
 </div>
@@ -485,7 +485,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href=""> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
@@ -501,6 +501,13 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+
+<ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
 </div>
 </p>
 </li>
