--- a/students.html
+++ b/students.html
@@ -104,7 +104,7 @@
   
 <li><p>Erwan Makame - McGill UG Student in Management</p>   
 
-<li><p>Barry Li – McGill UG Student in Computer Science</p> 
+<li><p>Barry Li - McGill UG Student in Computer Science</p> 
 
 
 <!--Page generated 2009-08-14 17:53:09 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.-->
