--- a/students.html
+++ b/students.html
@@ -52,13 +52,13 @@
 
 <li><p>Banafsheh Asadi (2023) - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
   
-<li><p>Zahra Jalali - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
+<li><p>Florian Golemo (2024) - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
+  
+<li><p>Zahra Jalali (2024) - OM Ph.D. student at McGill Desautels (co-advisor with Mehmet Gumus)</p>
   
 <li><p>Sandeep Chitla - OM Ph.D. student at NYU (advisor: Srikanth Jagabathula)</p>
   
 <li><p>Nymisha Bandi - OM Ph.D. student at McGill Desautels (co-advisor with Saibal Ray)</p>
-  
-<li><p>Florian Golemo - Postdoctoral fellow at McGill (co-advisor with Derek Nowrouzezahrai)</p>
 
 <li><p>Liting Chen – OM Ph.D. student at McGill Desautels (co-advisor with Sentao Miao)</p>
 
