--- a/research.html
+++ b/research.html
@@ -492,6 +492,13 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4722923"> "A General Framework for Robust Individualized Decision Learning with Sensitive Variables,"</a> with X. Tan, Z. Qi, and L. Tang, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
