--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ My research and teaching have received 30+ awards, including <a href="https://po
 <h2>Editorial Work</h2>
 <p>Department Editor for <a href="https://www.poms.org/journal/"</a>Production and Operations Management</a> – Service Operations Department and Supply Chain Management Department (2022-present)
 <p>Deputy Editor for <a href="https://pubsonline.informs.org/journal/serv"</a>Service Science</a> (2024-present)
-<p>Special Issue Editor for <a href="https://pubsonline.informs.org/page/serv/calls-for-papers"</a>Service Science Special Issue on "Impact of AI on Service Design and Delivery"</a> (2024-2025)
-<p>Special Issue Editor for <a href="https://www.poms.org/sites/default/files/callforpapers/cfp_POM_SI_ResDataScience_updated.pdf"</a>POM Special Issue on "Responsible Data Science"</a> (2022-2024)
+<p>Special Issue Editor for <a href="https://pubsonline.informs.org/page/serv/calls-for-papers"</a>Service Science on "Impact of AI on Service Design and Delivery"</a> (2024-2025)
+<p>Special Issue Editor for <a href="https://www.poms.org/sites/default/files/callforpapers/cfp_POM_SI_ResDataScience_updated.pdf"</a>POM on "Responsible Data Science"</a> (2022-2024)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/mnsc"</a>Management Science</a> (2020-present) 
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/opre"</a>Operations Research</a> (2024-present)
 <p>Associate Editor for <a href="https://pubsonline.informs.org/journal/msom"</a>M&SOM</a> (2021-present) 
