--- a/awards.html
+++ b/awards.html
@@ -32,6 +32,8 @@
 <h3>Awards</h3>
 <ul>
 
+<li><p>2024: Finalist in the CORS Practice Prize Competition</p>
+    
 <li><p>2024: RETHINK Retail's Top Retail Influencers</p>
 
 <li><p>2023: Finalist in the INFORMS Behavioral Operations Management Best Working Paper Competition</p>
