--- a/research.html
+++ b/research.html
@@ -513,7 +513,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4502968">"Managing Multihoming Workers in the Gig Economy,"</a> with G. Allon, K. Moon, and P. Sinchaisri, Submitted <br />
 Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
@@ -521,7 +521,7 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 </ul>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4591114">"Revisiting the CEO Effect Through a Machine Learning Lens,"</a> with H. Shimao, S. J. Kim, and W. Khern-am-nuai, Submitted <br />
 </div>
 </p>
 </li>
