--- a/research.html
+++ b/research.html
@@ -499,7 +499,7 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
-<li><p><a href=""> "Motivating Runners in Real Time: A Field Experiment,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4778848"> "Motivating Runners in Real Time: A Field Experiment,"</a> with D. Kim, Y. Son, and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
 </li>
