--- a/research.html
+++ b/research.html
@@ -46,7 +46,7 @@ else { document.getElementById(theID).style.display = "block" } }
 </div>
 <h2>Research</h2>
 <h3>Interests</h3>
-<p><b> Retail Operations, Data Science, Revenue Management and Pricing, Online Platforms, Field Experiments, Real Estate, Sustainability</b> 
+<p><b> Retail Operations, AI and Data Science, Revenue Management and Pricing, Online Platforms, Field Experiments, Real Estate, Sustainability</b> 
 
 <!--
 <p>During my PhD studies, I have been working on: 
