--- a/research.html
+++ b/research.html
@@ -492,6 +492,13 @@ Media coverage: <a href="https://theconversation.com/u-s-opportunity-zones-use-t
 </ul>
 
 <ul>
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Bridging Listeners with Artists: Deep Multi-Objective Multi-Stakeholder Music Recommendations,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Major Revision in <b>Management Science</b> <br />
+</div>
+</p>
+</li>
+</ul>
+  
+<ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4764418"> "Generative AI and Price Discrimination in the Housing Market,"</a> with J. Tanlamai and W. Khern-am-nuai, Submitted <font color="red"<b>(NEW)</b></font> <br />
 </div>
 </p>
@@ -537,13 +544,6 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4275804">"Myopic Price Promotions in IPOs: Evidence from Ride-Hailing Platforms,"</a> with A. Borah and D. Mitrofanov, Submitted <br />
 </div>
-</li>
-</ul>
-  
-<ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3848670">"Bridging Listeners with Artists: Deep Multi-Objective Multi-Stakeholder Music Recommendations,"</a> with M. Unger, B. Brost, P. Li, and A. Tuzhilin, Submitted <br />
-</div>
-</p>
 </li>
 </ul>
 
