--- a/research.html
+++ b/research.html
@@ -448,7 +448,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 <h3>Under Review and Working Papers</h3>
 
 <ul>
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Addressing Fairness in Machine Learning Predictions: Strategic Best-Response Fair Discriminant Removed Algorithm,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 2nd Major Revision in <b>Information Systems Research</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3389631">"Addressing Fairness in Machine Learning Predictions: Strategic Best-Response Fair Discriminant Removed Algorithm,"</a> with H. Shimao, W. Khern-am-nuai, and K. Kannan, 3rd Major Revision in <b>Information Systems Research</b> <br />
 Published in the 2022 AAAI/ACM Conference on Artificial Intelligence, Ethics, and Society <br />
 Media coverage: <a href="https://delve.mcgill.ca/read/overcoming-bias-ai-technologies/">Delve</a> <br />
 </div>
