--- a/research.html
+++ b/research.html
@@ -401,7 +401,7 @@ Media coverage: <a href="https://www.marketwatch.com/story/ipo-disclosure-is-a-m
 </ol>
 
 <ol start="38">
-<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal: The Influence of Artificial Intelligence and the Covid-19 Pandemic,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, Forthcoming in <b>IEEE Engineering Management Review</b> <br />
+<li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4007401">"Retail Analytics in the New Normal: The Influence of Artificial Intelligence and the Covid-19 Pandemic,"</a> with Y. Adulyasak, W. Khern-am-nuai, and M. Krause, <b>IEEE Engineering Management Review</b>, 52(1):268-280, 2024 <br />
 </div>
 </p>
 </li>
