--- a/research.html
+++ b/research.html
@@ -536,6 +536,7 @@ Accepted to the <i>2023 M&SOM Service Management SIG</i> <br />
 
 <ul>
 <li><p><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4476326">"Vertical Product Location Effect on Sales: A Field Experiment in Convenience Stores,"</a> with Z. Jalali, N. Ertekin, and M. Gumus, Submitted <br />
+Accepted to the <i>2024 M&SOM Service Management SIG</i> <br />
 </div>
 </p>
 </li>
